--- a/style.css
+++ b/style.css
@@ -1,11 +1,17 @@
-h1 {background-color: rgb(0,178,51);
-
+h1 {
+	background-color: rgb(0,178,51);
 }
 h2 {font-size: 30px}
 p {color: rgb(0,121,55);
   line-height: 32px;
   font-family: 'Raleway', sans-serif;
   font-size: 20px;
-  font-weight: 100;}
+  font-weight: 100;
+}
 
-img 
+img {
+	height: 100px
+}
+div{
+    border-radius: 5px;
+}
